# MasterChess

./: .gitignore  CMakeLists.txt  LICENSE  Proc.cpp  README.md  Source.cpp  USB.cpp
Arduino/: ArduinoChessBoard.cpp  ArduinoChessBoard.h  ArduinoChessBoard.hpp  ArduinoExported.h  ArduinoExported.hpp  CMakeLists.txt  ISerialPort.hpp  Matrix8x8.h  SerialPort.cpp  SerialPort.hpp  Serialization.cpp  Serialization.hpp  Serialization.inl  SimpleRPC.cpp  SimpleRPC.hpp
Linux/: CMakeLists.txt  SerialPort.cpp  SerialPort.hpp
MasterChess/: CMakeLists.txt  ChessGame.cpp  ChessGame.hpp  ChessPieces.hpp  ChessPlayer.cpp  ChessPlayer.hpp  Game.cpp  Game.hpp  HitInfo.hpp  IBoard.cpp  IBoard.hpp  IConsole.hpp  IGameListener.hpp  IInput.hpp  IMovement.hpp  IPiece.hpp  IPlayer.hpp
MasterChess/Boards/: ChessBoard.cpp  ChessBoard.hpp  ConsoleChessBoard.cpp  ConsoleChessBoard.hpp
MasterChess/ChessPieces/: Bishop.cpp  Bishop.hpp  CannonChessPiece.cpp  CannonChessPiece.hpp  ChessPiece.cpp  ChessPiece.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  MultiPositionChessPiece.cpp  MultiPositionChessPiece.hpp  Pawn.cpp  Pawn.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
MasterChess/Inputs/: StockfishInput.cpp  StockfishInput.hpp  TwoStepsInput.cpp  TwoStepsInput.hpp
MasterChess/Listeners/: ConsoleChessGameListener.cpp  ConsoleChessGameListener.hpp
Math/: Area.cpp  Area.hpp  CMakeLists.txt  Ray.cpp  Ray.hpp  Vector2Int.cpp  Vector2Int.hpp
Unity/: CMakeLists.txt  UnityGameListener.cpp  UnityGameListener.hpp  UnityRpc.grpc.pb.cc  UnityRpc.grpc.pb.h  UnityRpc.pb.cc  UnityRpc.pb.h  UnityRpc.proto  gen.ps1
Windows/: CMakeLists.txt  Console.cpp  Console.hpp  SerialPort.cpp  SerialPort.hpp
